--- a/index.html
+++ b/index.html
@@ -1,29 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.rtl.min.css" integrity="sha384-XfhC/Sid4FIGSXYebcOtcSCRFkd/zZzAMVipf0bNWucloRvcKK2/dpVWodQbQ1Ek" crossorigin="anonymous">    <link rel="stylesheet" href="assets/css/style.css">
     <title>Bootstrap for fun</title>
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-dark text-light bg-primary">
-    <div class="container-fluid pt-1">
-        <a href="#" class="navbar-brand">
-            <i class="bi bi-bootstrap"></i>    
-            Bootcamp
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-targer="#navmenu">
+<nav class="navbar navbar-expand-lg navbar-dark text-light bg-primary ">
+    <div class="container-fluid pt-1 ">
+        
+        
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navmenu">
-            <ul class="navbar-nav ms-auto">
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ">
                 <li class="nav-item"><a href="#" class="nav-link">Home</a></li>
                 <li class="nav-item"><a href="#" class="nav-link">History</a></li>
             </ul>
         </div>
+        <a href="#" class="navbar-brand d-none d-md-block">
+            Bootcamp
+            <i class="bi bi-bootstrap"></i>
+        </a>
     </div>
 </nav>
 <!-- ShowSection -->
